# Axiom

./: .clangd
examples/dlldecl/: CMakeLists.txt  main.cpp
examples/dlldecl/lib/: CMakeLists.txt  hello.cpp  hello.hpp
include/preproc/: any.hpp  arch.hpp  arrow.hpp  compiler.hpp  endian.hpp  platform.hpp
include/util/: defer.hpp
